--- a/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/Default.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/Default.cshtml
@@ -1,4 +1,4 @@
 ﻿@{
     Response.Redirect("~");
-    // This page does nothing but redirect to the actual URL sake
+    // This page does nothing but redirect to the actual homepage for URL sake
 }
