--- a/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/Lessenrooster.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/Lessenrooster.cshtml
@@ -130,10 +130,10 @@
         {
             <div class="itemContent rooster">
                 <div class="itemContentText rooster">
-                    Cursus nummer: @les.Cursusnummer
+                    Cursusnummer: @les.Cursusnummer
                 </div>
                 <div class="itemContentText rooster">
-                    lokaal: @les.Lokaal
+                    Lokaal: @les.Lokaal
                 </div>
                 <div class="itemContentText rooster">
                     Docent: @les.Docent
