--- a/Code/Test/CVO-Mobile/CVO-Mobile/Default.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Default.cshtml
@@ -45,10 +45,10 @@
         <a class="homeLinkButton" href="~/Deelpagina's/Kalender.cshtml">Kalender</a>
         <a class="homeLinkButton" href="~/Deelpagina's/Deadlines.cshtml">Deadlines</a>
         <a class="homeLinkButton" href="~/Deelpagina's/Evenementen.cshtml">Evenementen</a>
-        <a class="homeLinkButton" href="~/Deelpagina's/ExamenData.cshtml">ExamenData</a>
-        <a class="homeLinkButton" href="~/Deelpagina's/ExamenPunten.cshtml">ExamenPunten</a>
+        <a class="homeLinkButton" href="~/Deelpagina's/ExamenData.cshtml">Examendata</a>
+        <a class="homeLinkButton" href="~/Deelpagina's/PuntenOverzicht.cshtml">Puntenoverzicht</a>
         <a class="homeLinkButton" href="~/Deelpagina's/Lessenrooster.cshtml">Lessenrooster</a>
-        <a class="homeLinkButton" href="~/Deelpagina's/TrajectOverzicht.cshtml">TrajectOverzicht</a>
+        <a class="homeLinkButton" href="~/Deelpagina's/TrajectOverzicht.cshtml">Trajectoverzicht</a>
         <a class="homeLinkButton" href="https://moodle.cvoantwerpen.be">Moodle</a>
         <a class="homeLinkButton" href="http://www.cvoantwerpen.be">CVO Antwerpen</a>
     </div>
