--- a/Code/Test/CVO-Mobile/CVO-Mobile/Styles/Site.css
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Styles/Site.css
@@ -210,6 +210,7 @@ th {
     color: #FFF;
     border-radius: 5px 0px 0px 0px;
     font-size:22px;
+    text-align:center;
 }
 
 
@@ -301,7 +302,7 @@ th {
     font-size: large;
     color: #676767;
     border: 2px solid #DB5C3D;
-    margin: 5px;
+    text-align:center;
 }
 
 .optionSelected {
@@ -430,6 +431,21 @@ th {
 
 }
 
+.tableBox{
+    margin-bottom: 2px;
+    width: 100%;
+    max-width: 100%;
+}
+
+.tableBox > .itemTitle{
+    font-size:15px;
+}
+
+.tableBox > .itemTitle > div {
+    display: inline-block;
+
+}
+
 .roosterModule{
     min-width: 250px;
 }
@@ -438,7 +454,20 @@ th {
     min-width: 125px;
 }
 
+.tableTitle3{
+    min-width: 250px;
+}
+
+.tableTitle1, .tableTitle2{
+    min-width: 250px;
+}
+
 .itemContentText.rooster{
+    display:inline-block;
+    min-width: 200px;
+}
+
+.itemContentText.table{
     display:inline-block;
     min-width: 200px;
 }
