--- a/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/PuntenOverzicht.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/PuntenOverzicht.cshtml
@@ -68,122 +68,108 @@
     }
     
 }
-
-
-        <form id="cursusResultaat-display" action="" method="post">
-            <fieldset>
-                <legend>Display opties</legend>
-                <button type="submit" name="action" value="tweedeZitInschrijvingLijst-tonen">Mijn 2de zit</button>
-                <button type="submit" name="action" value="alle-resultaten">Alle resultaten</button>
-            </fieldset>
-        </form>
-
-
-    <div class="containerBig">
-        <div class="containerCalendarRow">
-            <div class="containerCalendarTitle">
-                CursusNr
-            </div>
-            <div class="containerCalendarTitle">
-                Module
-            </div>
-            <div class="containerCalendarTitle">
-                Totaal
-            </div>
-            <div class="containerCalendarTitle">
-                PE
-            </div>
-            <div class="containerCalendarTitle">
-                1ste zit
-            </div>
-            <div class="containerCalendarTitle">
-                Deliberatie 1ste zit
-            </div>
-            <div class="containerCalendarTitle">
-                2de zit
-            </div>
-            <div class="containerCalendarTitle">
-
-            </div>
-            <div class="containerCalendarTitle">
-                Deliberatie 2de zit
-            </div>
-        </div>
-
-        @for (int i = 0; i < cursusResultatenLijst.Count; i++)
-        {
-            Administratix.BLL.CursusResultaat resultaat = cursusResultatenLijst[i];
-            <div class="containerCalendarRow @(i%2 == 0 ? "":"shaded")">
-
-                <div class="containerCalendarTitle">
-                    @resultaat.CursusNummer
-                </div>
-                <div class="containerCalendarTitle">
-                    @resultaat.Module
-                </div>
-                <div class="containerCalendarTitle">
-                    @if (resultaat.PuntenTotaal == 0)
-                    {
-                        <p>x</p>
-                    }
-                    else 
-                    { 
-                        @resultaat.PuntenTotaal
-                    }
-                </div>
-                <div class="containerCalendarTitle">
-                    @if (resultaat.PuntenPermanenteEvaluatie == 0)
-                    {
-                        <p>x</p>
-                    }
-                    else 
-                    { 
-                        @resultaat.PuntenPermanenteEvaluatie
-                    }
-                </div>
-                <div class="containerCalendarTitle">
-                    @if (resultaat.PuntenEersteZit == 0)
-                    {
-                        <p>x</p>
-                    }
-                    else
-                    {
-                        @resultaat.PuntenEersteZit
-                    }
-                </div>
-                <div class="containerCalendarTitle">
-                    @if (resultaat.OpmerkingNaDeliberatieEersteZit == null)
-                    {
-                        <p>x</p>
-                    }
-                    else
-                    {
-                        @resultaat.OpmerkingNaDeliberatieEersteZit
-                    }
-                </div>
-                <form id ="tweedezit-inschrijven" action="" method="post">
-                    <div class="containerCalendarTitle">
-                    @if (resultaat.PuntenTweedeZit == 0)
-                    {
-                        <p>x</p>
-                    }
-                    else
-                    {
-                        @resultaat.PuntenTweedeZit
-                        
-                    }
-                    </div>
-                    @if (Session["cursist"] != null)
-                    {
-                    <div class="containerCalendarTitle">
-                        <input type="hidden" name="IdTweedeZit-inschrijving" id="IdTweedeZit-inschrijving" value="@resultaat.IdTweedeZit" />
-                        <button type="submit" name="action" value="inschrijven">Inschrijven</button>
-                    </div>
-                    }
-                </form>
-            </div>
-        }
+<h1>Puntenoverzicht</h1>
+<form id="puntenoverzicht-display" action="" method="post" class="containerBig containerOptions">
+    <div class="containerOption">
+        <div class="containerTitle"></div>
+        <button type="submit" name="action" class="optionButton" value="tweedeZitInschrijvingLijst-tonen">Mijn 2de zit</button></a>
+        <button type="submit" name="action" class="optionButton" value="alle-resultaten">Alle resultaten</button></a>
     </div>
+</form>
 
+@if (action.Equals("tweedeZitInschrijvingLijst-tonen"))
+{
 
+}
+else
+{
+    for (int i = 0; i < cursusResultatenLijst.Count; i++)
+    {
+        Administratix.BLL.CursusResultaat module = cursusResultatenLijst[i];
+        <div class="itemBox tableBox" id="@i">
+            <a class="itemTitle" href="#@i">
+                <div class="tableTitle1">
+                    Cursusnummer: @module.CursusNummer
+                </div>
+                <div class="tableTitle2">
+                    Module: @module.Module
+                </div>
+            </a>
+            <div class="itemContent table">
+                <div class="itemContentText table">
+                    @if (module.PuntenPermanenteEvaluatie == 0)
+                    {
+                        <p>PE: niet bekend</p>
+                    }
+                    else
+                    {
+                        <p>PE: @module.PuntenPermanenteEvaluatie</p>
+                    }
+                </div>
+                <div class="itemContentText table">
+                    @if (module.PuntenEersteZit == 0)
+                    {
+                        <p>1ste zit: niet bekend</p>
+                    }
+                    else
+                    {
+                        <p>1ste zit: @module.PuntenEersteZit</p>
+                    }
+                </div>
+                <div class="itemContentText table">
+                    @if (module.PuntenTotaal == 0)
+                    {
+                        <p>Totaal: niet bekend</p>
+                    }
+                    else
+                    {
+                        <p>Totaal: @module.PuntenEersteZit</p>
+                    }
+                </div>
+                <div class="itemContentText table">
+                    @if (module.OpmerkingNaDeliberatieEersteZit == null)
+                    {
+                        <p>Deliberatie 1ste zit: niet bekend</p>
+                    }
+                    else
+                    {
+                        <p>Deliberatie 1ste zit: @module.OpmerkingNaDeliberatieEersteZit</p>
+                    }
+                </div>
+                <div class="itemContentText table">
+                    @if (module.PuntenTweedeZit == 0)
+                    {
+                        <p>2de zit: niet bekend</p>
+                    }
+                    else
+                    {
+                        <p>2de zit: @module.PuntenTweedeZit</p>
+                    }
+                </div>
+                <div class="itemContentText table">
+                    @if (module.OpmerkingNaDeliberatieTweedeZit == null)
+                    {
+                        <p>Deliberatie 2de zit: niet bekend</p>
+                    }
+                    else
+                    {
+                        <p>Deliberatie 2de zit: @module.OpmerkingNaDeliberatieTweedeZit</p>
+                    }
+                </div>
+                @if(Session["cursist"] != null)
+                {
+                    <form id="tweedezit-inschrijven" action="" method="post">
+                        <div class="itemContentText table">
+                            <input type="hidden" name="IdTweedeZit-inschrijving" id="IdTweedeZit-inschrijving" value="@module.IdTweedeZit" />
+                            <button type="submit" name="action" value="inschrijven">Inschrijven</button>
+                        </div>          
+                    </form>
+                }
 
+            </div>
+
+        </div>
+    }
+}
+
+@message
